@@ -1,7 +1,8 @@
 #!/usr/bin/make -f
-#
-# Shorewall firewall (http://www.shorewall.net)
-# debianized version
+# -*- makefile -*-
+
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
 
 # shorewall version
 export VFULL=`grep "^VERSION=" install.sh | head -n 1 | cut -f 2 -d "="`
@@ -11,44 +12,35 @@ VMINOR:=$(shell echo $(V) |cut -f 2 -d .)
 VPATCH:=$(shell echo $(V) |cut -f 3 -d .)
 NEXTPATCH:=$(shell expr $(VPATCH) + 1 2>/dev/null || expr `echo $(VPATCH) | cut -f 1 -d - ` + 1)
 
-
 SRWL=$(CURDIR)/debian/shorewall
 
-build: build-arch build-indep debian/po/templates.pot
-build-arch: build-stamp
-build-indep: build-stamp
-build-stamp:
-	dh_testdir
-# 	there's nothing to compile ;-)
-	touch build-stamp
+%:
+	dh $@ 
 
 debian/po/templates.pot: debian/shorewall.templates
 	@debconf-updatepo
-#	@podebconf-report-po
 
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-	debconf-updatepo
-# 	clean the build directory
+override_dh_auto_configure:
+	true
+
+override_dh_auto_build:
+	true
+
+override_dh_auto_clean:
 	rm -rf $(SRWL)
-	dh_clean
 
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
+override_dh_install:
 	echo 'shorewall:current=$(VMAJOR).$(VMINOR).$(VPATCH)~' \
 		>> debian/shorewall.substvars
 	echo 'shorewall:next=$(VMAJOR).$(VMINOR).$(NEXTPATCH)~' \
 		>> debian/shorewall.substvars
+	DESTDIR=$(SRWL) BUILD=debian HOST=debian $(CURDIR)/install.sh
+	find $(SRWL) -type d -empty -delete
+# 	set version number
+	echo $(VFULL) > $(SRWL)/usr/share/shorewall/version
 
-	dh_install
-
-	install -m 644 debian/shorewall.lintian $(SRWL)/usr/share/lintian/overrides/shorewall
-
+override_dh_fixperms:
+	dh_fixperms -Xetc/shorewall -Xvar/lib/shorewall
 # 	Temporary zones are only available to root
 	chmod 750 $(SRWL)/var/lib/shorewall
 # 	As well as configuration files
@@ -56,34 +48,19 @@ install: build
 	chmod 640 $(SRWL)/etc/shorewall/*
 	chmod 644 $(SRWL)/etc/shorewall/shorewall.conf
 	chmod 644 $(SRWL)/etc/shorewall/Makefile
-# 	set version number
-	echo $(VFULL) > $(SRWL)/usr/share/shorewall/version
 #  global configuration has to be fully readable
 	chmod 644 $(SRWL)/usr/share/shorewall/*
 #  must be executable
 	chmod 755 $(SRWL)/usr/share/shorewall/getparams
-
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installdocs -A releasenotes.txt debian/NEWS.Debian
-	dh_installman manpages/*
-	dh_installchangelogs changelog.txt
-	dh_installlogrotate
-	dh_installinit --no-start -u"start 40 S . stop 89 0 6 ."
-	dh_installdebconf
-	dh_compress -Xusr/share/doc/shorewall/default-config
-	dh_fixperms -Xetc/shorewall -Xvar/lib/shorewall
-	# For some inexplicable reason, this is the only way to get persistence
 	chmod 755 $(SRWL)/usr/share/shorewall/compiler.pl
 	chmod 755 $(SRWL)/usr/share/shorewall/Shorewall
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb -v
 
-binary-arch: build install
+override_dh_compress:
+	dh_compress -Xusr/share/doc/shorewall/default-config
 
-binary: binary-indep binary-arch
+override_dh_installinit:
+	dh_installinit --onlyscripts --no-start -u"start 40 S . stop 89 0 6 ."
 
-.PHONY: build clean binary-indep binary-arch binary install
+override_dh_installman:
+	dh_installman manpages/*
+
