@@ -1,0 +1,2 @@
+releasenotes.txt
+debian/NEWS.Debian
