@@ -1,8 +1,9 @@
 shorewall (4.5.1.1-1) unstable; urgency=low
 
   * New Upstream Version
+  * Convert to debhelper compatibility level 8
 
- -- Roberto C. Sanchez <roberto@connexer.com>  Sun, 01 Apr 2012 23:02:01 -0400
+ -- Roberto C. Sanchez <roberto@connexer.com>  Sun, 01 Apr 2012 23:17:53 -0400
 
 shorewall (4.5.0.3-1) unstable; urgency=low
 
